Adding fix for heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
       <div class="row">
         <!-- Footer Social Icons-->
         <div class="col-lg-12 mb-12 mb-lg-12">
-          <h4 class="mb-4">Socials</h4><a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/StartBootstrap"><i class="fab fa-fw fa-instagram"></i></a>
+          <h4 class="mb-4">Socials</h4><a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/locate_a_brewery/"><i class="fab fa-fw fa-instagram"></i></a>
         </div>
       </div>
     </div>
