--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -18,6 +18,17 @@
 <!-- Locate-->
 <section class="page-section portfolio" id="locate">
   <div class="container">
+    <div class="col-md-12" style="text-align: center;padding-bottom: 5%;">
+      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B012HRGN1I&asins=B012HRGN1I&linkId=92a847944659c581fb7b73e89f11d3c2&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+      </iframe>
+      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B00AC783DW&asins=B00AC783DW&linkId=a1d3050b29a3b7440e4b15a4804c2411&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+      </iframe>
+      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B09DSSMJFM&asins=B09DSSMJFM&linkId=6cdad930fa55461748cc8c583236fe2b&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+      </iframe>
+      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B007SVEE6U&asins=B007SVEE6U&linkId=901626c550155b00d0f870e056fa755f&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+      </iframe>
+    </div>
+  </br>
     <!-- Portfolio Section Heading-->
     <div class="text-center">
       <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Locate</h2>
@@ -95,5 +106,17 @@
         </div>
       </div>
     </div>
+  </div>
+</br>
+</br>
+  <div class="col-md-12" style="text-align: center;padding-bottom: 5%;">
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B09KXR6M6R&asins=B09KXR6M6R&linkId=364883b04ab01c9711a9e5d2f9cd21af&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B07Q1KF3JS&asins=B07Q1KF3JS&linkId=8732b7ec61e23bb24d65d45bb2c267ae&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B0713SJZV6&asins=B0713SJZV6&linkId=1cd6caec28d64f757ba8b59717fc432d&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=locateabrewer-20&marketplace=amazon&amp;region=US&placement=B07YZDW5M2&asins=B07YZDW5M2&linkId=0a1873383880e272a357912305d494df&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
   </div>
 </section>
